--- a/index.html
+++ b/index.html
@@ -245,6 +245,8 @@
                 &copy;2024. House.com, All Right Reserved
 
             </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, autem! Harum architecto at maxime cupiditate quia. Voluptate eum dicta molestiae?
+            </p>
        </footer>
 
 
